# python-notes

./: .gitignore  README.md
aws/boto3/: s3.py
aws/glue/: glue-template.py
aws/lambda/: Dockerfile  lambda-notes.md  lambda-template.py  sample_event.json
basic/: args-kwargs-test.py  decorator.py  generator.py  lambda.py
cli/: venv-notes.md
gui/: turtle-test.py
module-creation-example/: README.md  example.py  pyproject.toml
module-creation-example/src/my_module/: __init__.py  awesome_class.py
module-creation-example/src/my_module/another_dir/: more_math.py
notes/: more_notes.md  mypy-notes.md  pip-notes.md  python.md  venv-notes.md
useful-modules/: argparse-test.py  async-testing.py  common.py  config.ini  configparser-test.py  csv_output.csv  csvwriting-test.py  encryption-testing.py  file-writing-test.py  glob-test.py  logging-test.py  os-pathlib-test.py  psycopg2-testing.py  requests-testing.py  test.txt  typing-test.py  unittesting.py
